# ocr-search

./: .env.txt  .gitignore  FAR338.tmp  README.md  alembic.ini  alembic.ini.txt  pyproject.toml  run.bat  run_web.bat  run_worker.bat  sc_ocr_create.ps1  sc_ocr_run.ps1  setup.bat  stop.ps1  tree_dirs.txt
alembic/: env.py
alembic/versions/: 0001_create_users_table.py  0001_init.py  2ae72d418ad5_new_table_users.py  c2404770ca78_add_path_origin_field_to_documents.py  ce3b14b411ca_add_column_email_to_document_3.py  cea6507d810f_merge_users_and_documents_heads.py
app/: config.py  db.py  logger.py  logger_worker.py  main.py  models.py  schemas.py  search.py
app/api/: deps.py  schemas.py  upload.py
app/broker/: README_DRAMATIQ_REDIS.md  config.py  workers.py
app/infra/: broker.py
app/routers/: auth.py
app/services/: auth.py  bytes_xtractor.py  bytes_xtractor2.py  ingest_folder.py  mailer.py  metadata.py  ocr_dispatch.py  ocr_image.py  ocr_pdf.py  save_outputs.py  uploads.py
app/services/extractors/: __init__.py  base.py  doc.py  email.py  html.py  pdf.py  pdf_fast.py  rtf.py  txt.py  xls.py
app/static/: app.css  app_.css
app/templates/: index.html
app/tests/: api.ipynb  api_search.ipynb  api_search.ps1  api_upload.ipynb  api_upload.py  auth.py  docslook.txt  ocr.py  pdf.txt  proba.ipynb  stgt.ipynb  temp.py  test.msg  test.txt  test_ocr.py  test_ocr_smoke.py  todb.py
app/tests/.ipynb_checkpoints/: api-checkpoint.ipynb  api_upload-checkpoint.ipynb
app/web/: admin_jobs.py  public.py  routes.py
app/web/templates/: _job_progress.html  _job_started.html  _job_status.html  _layout.html  _results.html  _scan_report.html  _send_pass.html  _settings.html  admin_jobs.html  index.html  login.html  register.html  upload.html
data/: settings.json
ocr_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
promt/: add_login_pass.txt
tmp/: Untitled.ipynb
